--- a/week_6/styles.css
+++ b/week_6/styles.css
@@ -27,13 +27,19 @@ h1 {
     font-family: "Pacifico";
 }
 
+h2 {
+    width: 100%;
+    text-align: center;
+
+}
+
 header a {
     text-decoration: none;
     color: #F8F8F8;
     padding: 12px;
     display: flex;
     align-items: center;
-    font-size: 1vh;
+    font-size: 2vh;
 }
 
 header a:hover {
@@ -51,13 +57,65 @@ header div {
 
 .form-row {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 form {
-    text-align: center;
     width: 33%;
     margin: 48px;
+}
+
+form p {
+    font-weight: bold;
+}
+
+form input,
+textarea {
+    border-radius: 5px;
+    border: 1.75px, solid, #727272;
+}
+
+form input[type=submit] {
+    background-color: #727272;
+    color: #F8F8F8;
+}
+
+form input[type=submit]:hover {
+    background-color: #a4a4a4;
+    color: #F8F8F8;
+    cursor: pointer;
+}
+
+#recipe-list {
+    display: flex;
+    gap: 15px;
+    font-size: small;
+    width: 95%;
+    padding: 0;
+    margin: auto;
+    margin-bottom: 1.5em;
+}
+
+#recipe-list p {
+    font-style: italic;
+}
+
+#recipe-list div {
+    border: 2px, solid, #727272;
+    border-radius: 30px;
+    padding: 5px;
+    padding-bottom: 50px;
+    background-color: #f0ece16c;
+    width: 50%;
+}
+
+#recipe-list h3,
+p {
+    text-align: center;
+}
+
+#recipe-list h4 {
+    padding-left: 20px;
 }
 
 /*for mobile*/
